--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,6 +1,6 @@
 [database]
 driver = mysql
-host = 127.0.0.1
-dbname = my_database
+host = 127.0.0.1:3307
+dbname = mission_list
 user = root
-password = 12345
+password = Thunderbitch-77
