remote connection changes

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -2,9 +2,9 @@
 ; remote connection
 driver = mysql
 host = sql8.freesqldatabase.com:3306
-dbname = sql8527471
-user = sql8527471
-password = aCrmsvLfzn
+dbname = sql8529623
+user = sql8529623
+password = IhdkIvmlb9
 
 ; local connection
 host2 = 127.0.0.1:3307
